--- a/app/assets/stylesheets/nutrition.css
+++ b/app/assets/stylesheets/nutrition.css
@@ -57,7 +57,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 0.125rem 0;
+  padding: 0;
   border-bottom: 4px solid #000;
 }
 
